# GhostApply

./: .env.example  .gitignore  README.md  go.mod  go.sum
.github/: copilot-instructions.md
cmd/filler/: automation.go  automation_url_test.go  main.go
cmd/scraper/: browser.go  extractor.go  extractor_url_test.go  main.go  main_path_test.go  providers_external.go  providers_external_test.go
dashboard/: README.md  app.go  app_settings_test.go  app_source_test.go  cohere.go  go.mod  go.sum  imap_listener.go  imap_listener_test.go  main.go  perf_suite_test.go  privacy_retention_test.go  privacy_utils_test.go  wails.json
dashboard/frontend/: index.html  tsconfig.json  tsconfig.node.json
dashboard/frontend/src/: App.css  App.tsx  style.css
dashboard/frontend/src/components/: BaseProfile.tsx  DashboardView.tsx  DossierReports.tsx  HistoryView.tsx  ProspectedJobsView.tsx  Settings.tsx  Sidebar.tsx  TopAppBar.tsx
dashboard/frontend/wailsjs/go/: models.ts
dashboard/frontend/wailsjs/go/main/: App.d.ts  App.js
docs/: TASKS.md
internal/db/: db.go  db_test.go
internal/domain/: candidatura.go  vaga.go
internal/infra/llm/: groq.go
internal/infra/pw/: browser.go
internal/parser/: cleaner.go  cleaner_test.go
rust-core/: .gitignore  Cargo.toml
rust-core/src/: config.rs  lib.rs  worker.rs
rust-core/src/database/: connection.rs  migrations.rs
rust-core/src/llm/: gemini_client.rs  groq_client.rs  mod.rs
rust-core/src/pdf/: generator.rs
scripts/: atomic_commit.sh
