[package]
name    = "ghost-apply-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Segurança: limpeza zero-cost de dados sensíveis na RAM
zeroize  = { version = "1", features = ["derive"] }

# Configuração: leitura do .env com fallback a variáveis de ambiente
dotenvy  = "0.15"
dirs     = "5.0"

# Banco criptografado: SQLite + SQLCipher (AES-256) compilado estaticamente
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# Serialização / Desserialização de structs de domínio
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Tratamento de erros idiomático
anyhow = "1"

# HTTP client assíncrono — rustls força TLS 1.3 (SecOps Task 27)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Runtime assíncrono
tokio = { version = "1", features = ["full"] }

# UUIDs para nomes de arquivo únicos (Task 37)
uuid = { version = "1", features = ["v4"] }

# Markdown → HTML (Task 34)
pulldown-cmark = "0.11"

# PDF puro Rust — sem dependências de sistema (Tasks 34, 36)
printpdf = "0.7"
